--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -1437,7 +1437,8 @@ img {
 .thumbnail>img {
     display: block;
     max-width: 100%;
-    height: auto
+    height: 100%;
+    width: 100%
 }
 
 .img-rounded {
@@ -2011,8 +2012,8 @@ pre code {
 }
 
 .row {
-    margin-right: -15px;
-    margin-left: -15px
+
+    margin-left: 0
 }
 
 .col-lg-1,
