--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 body {
+    
     margin: 0;
     padding: 0;
     background: #FFF;
@@ -700,10 +701,16 @@ p {
 }
 
 .social {
+    
     max-width: 400px;
-    margin: auto auto auto auto;
+    margin: 2rem auto 2rem auto !important;
 }
-
+@media (max-width: 667px){
+    .social{
+    display: flex;
+    align-items: center ;
+    justify-content:space-between;}
+}
 h2 {
     font-size: 22px;
     line-height: 1.4em;
