--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -1438,7 +1438,7 @@ img {
     display: block;
     max-width: 100%;
     height: 100%;
-    width: 100%
+    width:100
 }
 
 .img-rounded {
@@ -2012,8 +2012,8 @@ pre code {
 }
 
 .row {
-
-    margin-left: 0
+    margin-right: -15px;
+    margin-left: -15px
 }
 
 .col-lg-1,
@@ -5252,7 +5252,9 @@ textarea.input-group-sm>.input-group-btn>.btn {
 .navbar-nav>li>a {
     padding-top: 10px;
     padding-bottom: 10px;
-    line-height: 20px
+    line-height: 20px;
+    font-size: 20px;
+    font-weight: 600;
 }
 
 @media (max-width:767px) {
@@ -5289,7 +5291,9 @@ textarea.input-group-sm>.input-group-btn>.btn {
     }
     .navbar-nav>li>a {
         padding-top: 15px;
-        padding-bottom: 15px
+        padding-bottom: 15px;
+        font-weight: 600;
+        font-size: 20px;
     }
 }
 
