--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -1402,7 +1402,8 @@ select,
 textarea {
     font-family: inherit;
     font-size: inherit;
-    line-height: inherit
+    line-height: inherit;
+    
 }
 
 a {
@@ -3088,7 +3089,7 @@ legend {
 }
 
 label {
-    display: inline-block;
+    display:block;
     max-width: 100%;
     margin-bottom: 5px;
     font-weight: 700
